--- a/Alfa Bravo Charlie F/alap.htm
+++ b/Alfa Bravo Charlie F/alap.htm
@@ -6,35 +6,35 @@
 
 <body>
 <p>Alfa Bravo Charlie</p>
-<p>A NATO fonetikus ábécé, vagy hivatalos nevén az IRSA (<i>International Radiotelephony 
-  Spelling Alphabet</i>) a jelenleg legszélesebb körben használt és legelterjedtebb 
-  betûzési rendszer az angol nyelvterületen. Elsõdlegesen azzal a céllal fejlesztették 
-  ki és tették mindenekelõtt katonai távközlési szabvánnyá, hogy az élõszóban 
-  váltott üzenetekben szereplõ betûk és számjegyek egyértelmûen, félreértést kizáróan 
-  hangozzanak el. Másodlagos cél volt az ilyen jellegû kommunikáció egységesítése.</p>
-<p>Egy köznapi beszélgetés során a szavak összekapcsolódása, a szövegkörnyezet 
-  (kontextus) és a hangsúly is segítenek a hallottak értelmezésében és megértésében. 
-  A beszélt nyelv számottevõ adattöbbletet (redundanciát) tartalmaz az egyes nyelvi 
-  elemek, szavak önálló jelentésén felül, mely akkor is érthetõvé teszi a közlendõt, 
-  ha a kommunikáló felek kiejtése, hallása nem kifogástalan, vagy a kommunikációs 
-  közeg (pl. telefonvonal vagy rádiókapcsolat) minõsége kedvezõtlen. Ugyanakkor 
-  adatok, rövidítések, koordináták, azonosító kódok és még számtalan 'értelmetlen' 
-  beszédelem esetében e redundanciák hiányoznak, miközben azok egyértelmûsége, 
-  pontossága kritikus lehet (repülésirányítás, hadvezetés, építõipar, stb.).</p>
-<p>A NATO fonetikus ábécé olyan kódszavakkal reprezentálja az angol ábécé egyes 
-  betûit, melynek ismerete, kiejtése és azonosítása egyértelmû a kommunikáció 
-  résztvevõi számára, még azok eltérõ anyanyelvûsége esetében is. A kódszavak 
-  annyira különbözõek, hogy félreérthetõségük esélye igen csekély.</p>
-<p>Bár eredetileg katonai célra szánták, elterjedt és általánosan használttá vált 
-  minden olyan területen, ahol az angol kommunikáció nyelve. Talán a legnagyobb 
-  és legösszetettebb ilyen terület a nemzetközi légiközlekedés és légiforgalom 
-  irányítás.</p>
-<p>Érdekesség, hogy az A-betût reprezentáló Alfa és a J-betût reprezentáló Juliett 
-  kódszavak nem angol írásmód szerint szerepelnek az ábécében. Ennek épp az az 
-  oka, hogy nem angol anyanyelvû használók számára is egyértelmû legyen a kiejtés. 
-  Az eredeti alpha írásmód a legtöbb európai nyelven nem f-ként ejtendõ lenne, 
-  az angolokon kívül csak a franciák számára volna természetes. Az eredeti írásmód 
-  szerinti Juliet pedig épp a franciák miatt nem mûködne jól, mert a francia szóvégi 
-  egyszeres 't' néma.</p>
+<p>A NATO fonetikus ï¿½bï¿½cï¿½, vagy hivatalos nevï¿½n az IRSA (<i>International Radiotelephony 
+  Spelling Alphabet</i>) a jelenleg legszï¿½lesebb kï¿½rben hasznï¿½lt ï¿½s legelterjedtebb 
+  betï¿½zï¿½si rendszer az angol nyelvterï¿½leten. Elsï¿½dlegesen azzal a cï¿½llal fejlesztettï¿½k 
+  ki ï¿½s tettï¿½k mindenekelï¿½tt katonai tï¿½vkï¿½zlï¿½si szabvï¿½nnyï¿½, hogy az ï¿½lï¿½szï¿½ban 
+  vï¿½ltott ï¿½zenetekben szereplï¿½ betï¿½k ï¿½s szï¿½mjegyek egyï¿½rtelmï¿½en, fï¿½lreï¿½rtï¿½st kizï¿½rï¿½an 
+  hangozzanak el. Mï¿½sodlagos cï¿½l volt az ilyen jellegï¿½ kommunikï¿½ciï¿½ egysï¿½gesï¿½tï¿½se.</p>
+<p>Egy kï¿½znapi beszï¿½lgetï¿½s sorï¿½n a szavak ï¿½sszekapcsolï¿½dï¿½sa, a szï¿½vegkï¿½rnyezet 
+  (kontextus) ï¿½s a hangsï¿½ly is segï¿½tenek a hallottak ï¿½rtelmezï¿½sï¿½ben ï¿½s megï¿½rtï¿½sï¿½ben. 
+  A beszï¿½lt nyelv szï¿½mottevï¿½ adattï¿½bbletet (redundanciï¿½t) tartalmaz az egyes nyelvi 
+  elemek, szavak ï¿½nï¿½llï¿½ jelentï¿½sï¿½n felï¿½l, mely akkor is ï¿½rthetï¿½vï¿½ teszi a kï¿½zlendï¿½t, 
+  ha a kommunikï¿½lï¿½ felek kiejtï¿½se, hallï¿½sa nem kifogï¿½stalan, vagy a kommunikï¿½ciï¿½s 
+  kï¿½zeg (pl. telefonvonal vagy rï¿½diï¿½kapcsolat) minï¿½sï¿½ge kedvezï¿½tlen. Ugyanakkor 
+  adatok, rï¿½vidï¿½tï¿½sek, koordinï¿½tï¿½k, azonosï¿½tï¿½ kï¿½dok ï¿½s mï¿½g szï¿½mtalan 'ï¿½rtelmetlen' 
+  beszï¿½delem esetï¿½ben e redundanciï¿½k hiï¿½nyoznak, mikï¿½zben azok egyï¿½rtelmï¿½sï¿½ge, 
+  pontossï¿½ga kritikus lehet (repï¿½lï¿½sirï¿½nyï¿½tï¿½s, hadvezetï¿½s, ï¿½pï¿½tï¿½ipar, stb.).</p>
+<p>A NATO fonetikus ï¿½bï¿½cï¿½ olyan kï¿½dszavakkal reprezentï¿½lja az angol ï¿½bï¿½cï¿½ egyes 
+  betï¿½it, melynek ismerete, kiejtï¿½se ï¿½s azonosï¿½tï¿½sa egyï¿½rtelmï¿½ a kommunikï¿½ciï¿½ 
+  rï¿½sztvevï¿½i szï¿½mï¿½ra, mï¿½g azok eltï¿½rï¿½ anyanyelvï¿½sï¿½ge esetï¿½ben is. A kï¿½dszavak 
+  annyira kï¿½lï¿½nbï¿½zï¿½ek, hogy fï¿½lreï¿½rthetï¿½sï¿½gï¿½k esï¿½lye igen csekï¿½ly.</p>
+<p>Bï¿½r eredetileg katonai cï¿½lra szï¿½ntï¿½k, elterjedt ï¿½s ï¿½ltalï¿½nosan hasznï¿½lttï¿½ vï¿½lt 
+  minden olyan terï¿½leten, ahol az angol kommunikï¿½ciï¿½ nyelve. Talï¿½n a legnagyobb 
+  ï¿½s legï¿½sszetettebb ilyen terï¿½let a nemzetkï¿½zi lï¿½gikï¿½zlekedï¿½s ï¿½s lï¿½giforgalom 
+  irï¿½nyï¿½tï¿½s.</p>
+<p>ï¿½rdekessï¿½g, hogy az A-betï¿½t reprezentï¿½lï¿½ Alfa ï¿½s a J-betï¿½t reprezentï¿½lï¿½ Juliett 
+  kï¿½dszavak nem angol ï¿½rï¿½smï¿½d szerint szerepelnek az ï¿½bï¿½cï¿½ben. Ennek ï¿½pp az az 
+  oka, hogy nem angol anyanyelvï¿½ hasznï¿½lï¿½k szï¿½mï¿½ra is egyï¿½rtelmï¿½ legyen a kiejtï¿½s. 
+  Az eredeti alpha ï¿½rï¿½smï¿½d a legtï¿½bb eurï¿½pai nyelven nem f-kï¿½nt ejtendï¿½ lenne, 
+  az angolokon kï¿½vï¿½l csak a franciï¿½k szï¿½mï¿½ra volna termï¿½szetes. Az eredeti ï¿½rï¿½smï¿½d 
+  szerinti Juliet pedig ï¿½pp a franciï¿½k miatt nem mï¿½kï¿½dne jï¿½l, mert a francia szï¿½vï¿½gi 
+  egyszeres 't' nï¿½ma.</p>
 </body>
 </html>
